datepicker covered by editor toolbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,9 @@
     }
   }
 }
-/*.mantine-RichTextEditor-content {*/
-/*  @apply text-base dark:text-myTheme-light h-full dark:bg-myTheme-dark;*/
-/*}*/
+.mantine-RichTextEditor-toolbar {
+  @apply z-0;
+}
 /*.mantine-RichTextEditor-root {*/
 /*  @apply dark:bg-myTheme-dark;*/
 /*}*/
